--- a/static/week9/two-column.html
+++ b/static/week9/two-column.html
@@ -6,47 +6,29 @@
     <style>
     body {
         margin: 0;
-        min-width: 800px
+        min-width: 500px
+    }
+
+    .header {
+        height: 50px;
+        background-color: #fcc;
     }
 
     .left {
         width: 300px;
         float: left;
-        background-color: red;
-    }
-
-    .right {
-        width: 300px;
-        float: right;
-        background-color: red;
-    }
-
-    .footer {
-        clear: both;
+        background-color: #fee;
     }
 
     .main {
         overflow: hidden;
-        background-color: blue;
+        background-color: #faa;
     }
     </style>
 </head>
 <body>
+    <div class="header"></div>
     <div class="left">
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-    </div>
-    <div class="right">
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
-        <p>hello, world</p>
         <p>hello, world</p>
         <p>hello, world</p>
         <p>hello, world</p>
@@ -81,9 +63,6 @@
         <p>hello, world</p>
         <p>hello, world</p>
         <p>hello, world</p>
-        <p>hello, world</p>
-    </div>
-    <div class="footer">
         <p>hello, world</p>
     </div>
 </body>
